# Saudi-Attack

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  __main__.py  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  saudi_attack.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: joomla_vulnerabilities.json  wordpress_vulnerabilities.json
modules/: __init__.py  config.py  joomla_scanner.py  report_generator.py  scanner.py  utils.py  web_scanner.py  wordpress_scanner.py
templates/: report_template.html  report_template.md  report_template.txt
tests/: __init__.py  conftest.py  simple_test.py  test_api.py  test_cli.py  test_compatibility.py  test_config.py  test_error_handling.py  test_gui.py  test_integration.py  test_joomla_scanner.py  test_logging.py  test_main.py  test_network_utils.py  test_notifications.py  test_performance.py  test_report_generator.py  test_scanner.py  test_security.py  test_utils.py  test_utils_advanced.py  test_vulnerability_database.py  test_web_scanner.py  test_wordpress_scanner.py
